--- a/WebApplication2/WebApplication2/packages.config
+++ b/WebApplication2/WebApplication2/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="AngularJS.Core" version="1.3.15" targetFramework="net45" />
   <package id="AngularJS.Route" version="1.3.15" targetFramework="net45" />
+  <package id="DotNetZip" version="1.9.3" targetFramework="net45" />
+  <package id="Jil" version="2.9.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.2" targetFramework="net45" />
@@ -11,4 +13,5 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Sigil" version="4.4.0" targetFramework="net45" />
 </packages>
